--- a/contatos/templates/contatos/grupoContatos.html
+++ b/contatos/templates/contatos/grupoContatos.html
@@ -34,7 +34,7 @@
 <div id="grupoContatos">
     <div id="divTituloGrupoContatos">
         <h2>Grupo de Contatos</h2>
-        <a href="{% url 'grupoContatos_add' %}" id="adcNovoGrupo">Adicionar novo grupo</a>
+        <a href="{% url 'grupoContatos_add' %}" id="adcNovoGrupo">Adicionar novo Grupo de Contatos</a>
     </div>
     {% for grupoContatos in gruposContatos %}
     <div id="containerGrupo">
