--- a/contatos/templates/contatos/grupoContatos_edit.html
+++ b/contatos/templates/contatos/grupoContatos_edit.html
@@ -3,15 +3,13 @@
 {% block titulo %}Editar Grupo de Contatos{% endblock titulo %}
 
 {% block main %}
-
-<div id="container-inclusaoContato">
+<div id="container-inclusaoGrupoContatos">
     <h3>Edição de {{grupoContatos.titulo}}</h3>
     <form action="{% url 'grupoContatos_edit' grupoContatos.id %}" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Editar</button>
-        <a href="{% url 'grupoContatos' %}">Cancelar</a>
+        <a class="formCancelar" href="{% url 'grupoContatos' %}">Cancelar</a>
     </form>
 </div>
-
 {% endblock main %}
